pkt-fe::view log processing time

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-packet-log/view-packet-log.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-packet-log/view-packet-log.component.html
@@ -108,6 +108,15 @@
                     </mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="timeTaken">
+                    <mat-header-cell *matHeaderCellDef>Time Taken</mat-header-cell>
+                    <mat-cell *matCellDef="let role">
+                        <span *ngIf="role.processingTime">
+                            {{ role.processingTime}}
+                        </span>
+                    </mat-cell>
+                </ng-container>
+
                 <ng-template #blank>
                     -
                 </ng-template>
